# NTHU_GPA_Assignment2_Scene

./: CMakeLists.txt  README.md
asset/: fragment.fs.glsl  vertex.vs.glsl
asset/sibenik/: sibenik.mtl
include/: Common.h  camera.hpp  common.h  frame.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp
src/: main.cpp
